--- a/ContosoUniversity/Views/Students/Index.cshtml
+++ b/ContosoUniversity/Views/Students/Index.cshtml
@@ -19,6 +19,9 @@
                     @Html.DisplayNameFor(model => model.FirstMidName)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.EmailAddress)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.EnrollmentDate)
                 </th>
             <th></th>
