add phone number property to student class

--- a/ContosoUniversity/Views/Students/Index.cshtml
+++ b/ContosoUniversity/Views/Students/Index.cshtml
@@ -37,6 +37,9 @@
                 @Html.DisplayFor(modelItem => item.FirstMidName)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.EmailAddress)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.EnrollmentDate)
             </td>
             <td>
