--- a/ContosoUniversity/Views/Students/Index.cshtml
+++ b/ContosoUniversity/Views/Students/Index.cshtml
@@ -22,6 +22,9 @@
                     @Html.DisplayNameFor(model => model.EmailAddress)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.EnrollmentDate)
                 </th>
             <th></th>
@@ -38,6 +41,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EmailAddress)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EnrollmentDate)
