--- a/ContosoUniversity/Views/Students/Create.cshtml
+++ b/ContosoUniversity/Views/Students/Create.cshtml
@@ -33,6 +33,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="EmailAddress" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="EmailAddress" class="form-control" />
+                <span asp-validation-form="EmailAddress" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
